<resources>
    <string name="app_name">Demo</string>
    <string name="example_image_button">Example image button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_label">Your Label</string>
    <string name="example_text">Example Text</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="apiKey" />
    <string name="modifier1text">padding (red) and margin (blue)</string>
    <string name="modifier2text1">size: big</string>
    <string name="modifier2text2">size: small</string>
    <string name="sample_text_clickable">Clicked 0x</string>
    <string name="shadow">shadow</string>
    <string name="modifier_background">red background</string>
    <string name="check24logo">Check24 Logo</string>
    <string name="app_bar_layout">App Bar Layout</string>
</resources>